Fix: overlapse css on search bar

--- a/src/css/searchbar.css
+++ b/src/css/searchbar.css
@@ -5,17 +5,15 @@
     margin: 1% 0 1% 0 !important;
 }
 
-input {
+.input-lg {
     width: 100%;
     height: 100%;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
-input[type=text] {
     padding: 2%;
     border: none;
     border-left: 3px solid #76B900;
 }
+
 
 input:focus{
     outline: none !important;
