--- a/src/css/searchbarSM.css
+++ b/src/css/searchbarSM.css
@@ -1,5 +1,5 @@
 
-.search-bar {
+.search-bar-sm {
     /* width: 50%; */
     display: flex;
     height: 7vh;
@@ -8,16 +8,14 @@
     margin: 1% 0 1% 0 !important;
 }
 
-input {
+.input-sm {
     width: 50%;
     height: 100%;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
-input[type=text] {
     padding: 2%;
     border: none;
 }
+
 
 input:focus{
     outline: none !important;
